# SciLEx

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: index.md
docs/developer-guides/: adding-collectors.md  architecture.md
docs/getting-started/: configuration.md  installation.md  quick-start.md  troubleshooting.md
docs/reference/: api-comparison.md
docs/user-guides/: advanced-filtering.md  basic-workflow.md  python-scripting.md
paper/: paper.bib  paper.md
scilex/: abstract_validation.py  aggregate_collect.py  analyze.py  config_defaults.py  constants.py  duplicate_tracking.py  enrich_with_citations.py  export_to_bibtex.py  export_to_turtle.py  keyword_validation.py  logging_config.py  push_to_zotero.py  quality_validation.py  run_collection.py  snowball_sampling.py  summarize_clusters.py
scilex/Zotero/: zotero_api.py
scilex/citations/: cache.py  citations_tools.py  reference_fetcher.py
scilex/crawlers/: aggregate.py  aggregate_parallel.py  circuit_breaker.py  collector_collection.py  utils.py
scilex/crawlers/collectors/: __init__.py  arxiv.py  base.py  dblp.py  elsevier.py  hal.py  ieee.py  istex.py  openaire.py  orkg.py  semantic_scholar.py  springer.py
scilex/graph_analysis/: __init__.py  community.py  export.py  graphs.py  loader.py
scilex/rdf/: __init__.py  converter.py  mappings.py  namespaces.py  provenance.py
scilex/rdf/queries/: construct_citation_graph.rq  construct_cites_from_cited_by.rq  construct_coauthor_network.rq  construct_references_graph.rq  papers_by_relevance.rq  select_keyword_frequency.rq  select_most_cited.rq  select_papers_overview.rq  select_papers_per_year.rq
scilex/snowball/: __init__.py  candidates.py  fetcher.py  filter.py  merge.py
scilex/summarize/: __init__.py  report.py  stats.py
tests/: README.md  conftest.py  test_abstract_validation.py  test_aggregate_collect.py  test_aggregate_functions.py  test_aggregate_parallel.py  test_base_collector.py  test_collector_collection.py  test_config_defaults.py  test_dual_keyword_logic.py  test_enrich_with_citations.py  test_format_converters.py  test_graph_analysis.py  test_openaire_aggregation.py  test_openaire_collector.py  test_openalex.py  test_orkg_aggregation.py  test_orkg_collector.py  test_rdf_converter.py  test_reference_fetcher.py  test_snowball.py  test_summarize.py  test_zotero_api.py
tests/fixtures/openaire/: search_results.json
tests/fixtures/orkg/: search_results.json
