[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scilex"
version = "1.0.0"
description = "Science Literature Exploration - A toolkit for systematic literature reviews"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Cringwal", email = "cringwal@example.com" },
]
keywords = ["systematic-review", "literature-review", "academic-search", "zotero", "bibtex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "arrow>=1.3",
    "beautifulsoup4>=4.12",
    "bibtexparser>=1.4,<2",
    "deprecated>=1.2",
    "html5lib>=1.1",
    "httpx>=0.27",
    "huggingface-hub>=1.0",
    "lxml>=5.0",
    "orcid>=1.0",
    "pandas>=2.0",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "ratelimit>=2.2",
    "rdflib>=7.0",
    "requests>=2.28",
    "scipy>=1.11",
    "simplejson>=3.19",
    "sparqlwrapper>=2.0",
    "tenacity>=9.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]
stats = [
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.scripts]
scilex-collect = "scilex.run_collection:main"
scilex-aggregate = "scilex.aggregate_collect:main"
scilex-enrich = "scilex.enrich_with_hf:main"
scilex-export-bibtex = "scilex.export_to_bibtex:main"
scilex-push-zotero = "scilex.push_to_zotero:main"

[project.urls]
Homepage = "https://github.com/cringwal/SciLEx"
Repository = "https://github.com/cringwal/SciLEx"
Issues = "https://github.com/cringwal/SciLEx/issues"

[tool.hatch.build.targets.wheel]
packages = ["scilex"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
